force-app/main/default/objects/Txn_Log_Settings__c/Txn_Log_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Transaction Log Settings</label>
</CustomObject>