force-app/main/default/objects/Txn_Log_Settings__c/fields/Enabled_Triggers_4__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Triggers_4__c</fullName>
    <description>Comma separated list of Trigger Names for which logging is enabled. Use the additional &quot;Enabled Triggers x&quot; fields to support a large number of triggers.</description>
    <inlineHelpText>Comma separated list of Trigger Names for which logging is enabled. Use the additional &quot;Enabled Triggers x&quot; fields to support a large number of triggers.</inlineHelpText>
    <label>Enabled Triggers 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>