force-app/main/default/objects/Txn_Log_Settings__c/fields/Log_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Log_Transactions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Transactions</label>
    <type>Checkbox</type>
</CustomField>